--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-avatar": "^3.9.7",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.2.0",
     "react-image-gallery": "^1.0.8",
     "react-scripts": "^4.0.2",
     "react-use-styles": "^1.0.6",
