--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "box-ui-elements": "^12.0.0",
     "card-react": "^1.2.7",
     "materialize": "^1.0.0",
+    "node-modules": "^0.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-avatar": "^3.9.7",
