--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.0.8",
+    "react-native-elements": "^3.2.0",
     "react-scripts": "^4.0.2",
     "react-use-styles": "^1.0.6",
     "typescript": "~3.7.2"
