--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "box-ui-elements": "^12.0.0",
     "card-react": "^1.2.7",
     "materialize": "^1.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "node-modules": "^0.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -26,6 +27,7 @@
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.0.8",
+    "react-materialize": "^3.9.7",
     "react-native-elements": "^3.2.0",
     "react-scripts": "^4.0.2",
     "react-use-styles": "^1.0.6",
