--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^16.13.1",
     "react-avatar": "^3.9.7",
     "react-bootstrap": "^1.4.3",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.0.8",
