--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.0.8",
     "react-materialize": "^3.9.7",
+    "react-native": "^0.63.4",
     "react-native-elements": "^3.2.0",
     "react-scripts": "^4.0.2",
+    "react-text": "^3.2.4",
     "react-use-styles": "^1.0.6",
     "typescript": "~3.7.2"
   },
