Laget progressbar til trophies i sidebar, prøvd på styles mtp responsive. Ellers endret noen farger, padding etc.

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,11 @@
 {
 
+    "//a": "English Now: 4597845961867264",
+    "//b": "Matematikk 8: 6651893208711168",
+    "//c": "Matematikk 5: 5763033568247808",
+    "//d": "Syklus: 4730689350270976",
+    "//e": "Matematikk 5-7 grunnleggende: 5814764599640064",
+
     "LOOKING_FOOR_COURSE_ID": 6651893208711168,
     "CROSS_LESSON_DEFINED_ID": 6713377262927872,
     "CROSS_LESSON_COURSE_ORIGINAL_ID": 6041119129993216,
