--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-avatar": "^3.9.7",
     "react-bootstrap": "^1.4.3",
     "react-circular-progressbar": "^2.0.3",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^16.13.1",
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.0.8",
