--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-materialize": "^3.9.7",
     "react-native": "^0.63.4",
     "react-native-elements": "^3.2.0",
+    "react-responsive": "^8.2.0",
     "react-scripts": "^4.0.2",
     "react-text": "^3.2.4",
     "react-use-styles": "^1.0.6",
