--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/avatar-group": "^8.0.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -24,6 +25,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-avatar": "^3.9.7",
+    "react-avatar-stack": "^0.0.4",
     "react-bootstrap": "^1.4.3",
     "react-circular-progressbar": "^2.0.3",
     "react-device-detect": "^1.15.0",
@@ -31,10 +33,11 @@
     "react-icons": "^4.2.0",
     "react-image-gallery": "^1.0.8",
     "react-materialize": "^3.9.7",
-    "react-native": "^0.63.4",
+    "react-native": "^0.21.0",
     "react-native-elements": "^3.2.0",
     "react-responsive": "^8.2.0",
     "react-scripts": "^4.0.2",
+    "react-sticky": "^6.0.3",
     "react-text": "^3.2.4",
     "react-use-styles": "^1.0.6",
     "typescript": "~3.7.2"
