--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-responsive": "^8.2.0",
     "react-scripts": "^4.0.2",
     "react-sticky": "^6.0.3",
+    "react-tabindex": "^1.0.3",
     "react-text": "^3.2.4",
     "react-use-styles": "^1.0.6",
     "typescript": "~3.7.2"
